app/scss/style.scss
/* ... */
.main-index {
  min-height: 900px;
  position: relative;
  overflow: hidden;

  &-backgound {
    left: 0;
    position: absolute;
    width: 100%;
    height: 100%;
    background-image: url('../images/main-index.png');
    background-size: cover;
  }

  &-animeel {
    position: absolute;
    width: 100%;
    height: 100%;

    .cloud-left-1 {
      position: absolute;
      bottom: 70%;
      left: -3%;
    }

    .cloud-left-2 {
      position: absolute;
      bottom: 19%;
      font-size: 9px;
    }

    .cloud-left-3 {
      position: absolute;
      bottom: 64%;
      left: 38%;
    }

    .cloud-right-1 {
      position: absolute;
      right: 17%;
      top: 15%;
    }
  }

  &-box {
    display: flex;
    flex-direction: column;
    padding-top: 70px;
    max-width: 1300px;

    @include screen('sm', 'max') {
      padding-top: 0px;
    }

    &-slider {
      &-el {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        position: relative;

        @include screen('sm', 'max') {
          flex-direction: column;
          justify-content: flex-start;
        }

        @include screen('xs', 'max') {
          margin-top: -80px;
        }

        &-left {
          position: relative;
          top: 80px;

          @include screen('lg', 'max') {
            transform: scale(.8);
          }

          @include screen('md', 'max') {
            transform: scale(.7);
          }

          @include screen('xs', 'max') {
            transform: scale(.6);
            margin-bottom: -50px;
          }
        }

        &-right {
          width: 40%;
          @include screen('sm', 'max') {
            width: 100%;
            padding-bottom: 140px;
          }
          color: $color-text-main;

          & > h2 {
            font-family: 'Lineatura';
            font-size: 70px;
            line-height: 68px;
            margin-bottom: 39px;

            @include screen('lg', 'max') {
              font-size: 50px;
              line-height: 48px;
            }

            @include screen('xs', 'max') {
              font-size: 30px;
              margin-bottom: 20px;
            }
          }

          & > p {
            font-family: 'CeraPro';
            font-size: 20px;
            line-height: 31px;
            margin-bottom: 49px;

            @include screen('xs', 'max') {
              font-size: 16px;
              line-height: 24px;
              margin-bottom: 20px;
            }
          }
        }
      }
    }

    &-control {
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;
      max-width: 1400px;
      margin: 0 auto;
      position: relative;
      padding-bottom: 70px;

      @include screen('custom-860', 'max') {
        flex-direction: column;
      }

      &-items {
        position: absolute;
        right: 0px;
        z-index: 10;

        @include screen('custom-860', 'max') {
          right: unset;
        }

        &-el {
          background: $background-white;
          border-radius: 100px;
          width: 61px;
          height: 61px;
          display: inline-block;
          margin-right: 19px;
          position: relative;
          transition: transform 0.2s;

          &:hover {
            transform: scale(1.2);
          }

          &::before {
            content: '';
            border-radius: 100%;
            position: absolute;
            display: block;
            width: 25px;
            height: 25px;
            left: 5px;
            background: #fff;
            border: 2px solid #d3d3d3;
            top: 50%;
            transform: translate(50%,-50%);
          }

          &.active {
            &::after {
              content: '';
              position: absolute;
              display: block;
              height: 20px;
              width: 2px;
              background: $color-text-main;
              top: -15%;
              left: 48%;
            }
          }
        }
      }
    }
  }
}
/* ... */

